SSDM-2600: log MaxPermSize setting in JMXMemoryMonitor
SVN: 35034